[package]
name = "server-oauth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
axum = "*"
serde = "*"
serde_derive = "*"
serde_urlencoded = "*"
dotenv = "*"
reqwest = { version = "*", features = ["json"] }
tracing-subscriber = "*"
tracing = "*"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'